gcc/testsuite/rust/rustc/ui/parser/suggest-const-for-global-var.rs
let X: i32 = 12;
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {
    println!("{}", X);
}

